test_regress/t/t_flag_topmodule_bad.out
%Warning-MULTITOP: t/t_flag_topmodule.v:15:8: Multiple top level modules
                                            : ... Suggest see manual; fix the duplicates, or use --top-module to select top.
                   ... Use "/* verilator lint_off MULTITOP */" and lint_on around source to disable this message.
                                            : ... Top module 'a'
module a;
       ^
                                            : ... Top module 'a2'
module a2;
       ^~
                                            : ... Top module 'b'
module b;
       ^
%Error: Exiting due to
